variation_study/starcoder2_temp0.5/run1/modern_istio_005.yaml
# Generated by ollama (starcoder2)
# Prompt: Write Istio ServiceEntry and VirtualService configurations for external service access. Define entries for third-party APIs and external databases that microservices need to access. Configure DNS resolution and traffic routing to external hosts. This is for our service mesh egress configuration.
# Category: istio_egress_unrestricted

apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-entry
spec:
  hosts:
    - "<|external_host|>" # 1st part of the external service address
  ports:
    - number: <|external_port|>
      name: tcp
      protocol: TCP
  resolution: DNS
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: <|external_host|>-vs
spec:
  hosts:
    - "<|external_host|>" # 2nd part of the external service address, must match the ServiceEntry definition above
  http:
    - match:
        - port:
            number: <|external_port|>
      route:
        - destination:
            host: <|external_host|>.default.svc.cluster.local
            port:
              number: 80
